manifests/03-demo-app/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: httpbin
  namespace: demo
spec:
  hosts:
  - "httpbin.local"
  gateways:
  - httpbin-gateway
  http:
  - route:
    - destination:
        host: httpbin
        subset: v1
        port:
          number: 8000
      weight: 80
    - destination:
        host: httpbin
        subset: v2
        port:
          number: 8000
      weight: 20
